--- a/src/pages/Auth/Admin/style.scss
+++ b/src/pages/Auth/Admin/style.scss
@@ -5,8 +5,8 @@
   height: 100vh;
 
   .image-container {
-    width: 100%;
-    height: 100vh;
+    width: 10vw;;
+    height: 10vh;
     position: relative;
 
     img {
